--- a/package.json
+++ b/package.json
@@ -1,37 +1,28 @@
 {
-  "name": "marcusfrancosite",
-  "version": "0.1.0",
+  "name": "marcusfran.co",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-spring": "^8.0.27",
-    "react-three-fiber": "^4.2.21",
-    "three": "^0.120.1"
-  },
+  "description": "Marcus Franco's personal website",
+  "version": "0.1.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@material-ui/styles": "^4.10.0",
+    "gatsby": "^2.24.67",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-sass": "^2.3.15",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
+    "node-sass": "^4.14.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "prettier": "2.1.2"
   }
 }
