--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/styles": "^4.10.0",
     "gatsby": "^2.24.67",
+    "gatsby-plugin-google-analytics": "^2.3.16",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-sass": "^2.3.15",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
